CUDA C++ Optimal/results/compilation_logs/compile_size_42_reg_32_20260201_1932.txt
========== COMPILATION START ========== 
Parameters: PARAMETR_SIZE=42, MAXREGCOUNT=32 
Compile command: nvcc -O3 -arch=sm_70 -std=c++17 -o aco_cuda_const_while.exe aco_cuda_global_while.cu -Xcompiler "/O2 /fp:fast /openmp /MT" -use_fast_math -lcudart -maxrregcount=32 -Xptxas "-O3,-v" --resource-usage 
 
aco_cuda_global_while.cu(466): warning #68-D: integer conversion resulted in a change of sign
          hashTable[i].key = -1;
                             ^

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

aco_cuda_global_while.cu(2526): error: argument of type "int *" is incompatible with parameter of type "double *"
              antOF[agent] = benchmark_function(&ant_parametr[agent * 42]);
                                                ^

1 error detected in the compilation of "aco_cuda_global_while.cu".
aco_cuda_global_while.cu
========== COMPILATION END ========== 
Exit code: 2 
